[package]
name = "kaspatalk-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
futures = "0.3.29"
kaspa-consensus-core = "0.15.0"
kaspa-rpc-core = "0.15.0"
kaspa-wrpc-client = "0.15.0"
kaspa-notify = "0.15.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
workflow-core = "0.18.0"
workflow-log = "0.18.0"
ctrlc = "3.4.1"
async-channel = "2.3.1"
polodb_core = "5.1.3"
serde = "1.0.215"
axum = "0.7.9"
axum-macros = "0.4.2"
clap = { version = "4.5.23", features = ["derive"] }
